Alignment fixing

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -607,6 +607,7 @@ p.simple-content{
 	font-family: "Crimson Text", serif;
 	font-size: 12pt;
 	color: #424242;
+	font-kerning: normal;
 }
 
 address.fov-donate{
@@ -710,7 +711,7 @@ a.mailid{
 	border-bottom: 1px;
 	border-style: solid;
 	border-bottom-color: #939393;
-	padding-top: -5px
+	padding-top: -5px;
 }
 
 p.project-specifics {
@@ -1012,7 +1013,7 @@ p.icon-attribution{
 	[class*="collab"]{
 		width: 25%;
 		padding: 0px 10px 0px 10px;
-		min-height: 300px;
+		min-height: 320px;
 	}
 	[class*="project"]{
 		width:50%;
